# binder-linux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arm-toolchain.cmake  arm8.2-toolchain.cmake  arm9.1-toolchain.cmake
aidl-example/: CMakeLists.txt  EventBus.cpp  EventListener.cpp  EventPost.cpp  RgbLedsClient.cpp  RgbLedsClient.h  RgbLedsService.cpp  c_config.c  c_config.h  main.c
aidl-example/com/fv/: IEventBusInterface.aidl  IEventListenerInterface.aidl  IRgbLedsService.aidl
android/cutils/: ashmem-dev.c
android/selinux/: android.c  android.h
binder/: IPermissionController.cpp  IServiceManager.cpp  ProcessState.cpp  Static.cpp
include/binder/: IPermissionController.h  IServiceManager.h  Parcel.h
include/private/binder/: Static.h  binder_module.h
include/utils/: Vector.h
servicemanager/: binder.h  service_manager.c
test/: test_main.cpp
